--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   gap: 10px;
 }
 
+.card {
+  border-color: 1px solid rgb(135, 159, 237);
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
